[package]
name = "vape"
description = "ｆｕｌｌ ｗｉｄｔｈ ａｅｓｔｈｅｔｉｃｓ"
version = "0.2.3"
authors = ["Joshua Li <josh@jrl.ninja>"]
license = "MIT"

homepage = "https://www.github.com/JoshuaRLi/vape"
repository = "https://www.github.com/JoshuaRLi/vape"
readme = "README.md"
keywords = ["aesthetic", "vaporwave", "fullwidth"]
categories = ["command-line-utilities", "text-processing"]

[badges]
travis-ci = { repository = "JoshuaRLi/vape" }

[dependencies]
getopts = "~0.2"
rand = { version = "~0.7", features = ["small_rng"] }

[[bin]]
name = "vape"
path = "src/main.rs"

[profile.release]
lto = "fat"
opt-level = "z"  # smallest build possible
codegen-units = 1
panic = "abort"
